# NextBlog

./: .gitignore  AGENTS.md  README.md  contentlayer.config.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  pyrightconfig.json  requirements.txt  test-eslint-error.ts  tsconfig.json  vercel.json
apps/backend/: .gitignore  README.md  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/: dependencies.py  router.py
apps/backend/app/core/: config.py
apps/backend/app/database/: base.py  session.py
apps/backend/app/graphql/: router.py  schema.py
apps/backend/app/integrations/: github.py  llm.py
apps/backend/app/models/: __init__.py  blog.py  dictionary.py  embedding.py  locale.py  post.py  project.py  site_config_category.py  site_content.py  site_language.py  site_navigation.py  site_setting.py  static_content.py  static_content_category.py
apps/backend/app/schemas/: __init__.py  about_init.py  blog.py  blog_tags.py  common.py  home_init.py  locales.py  post.py  post_tags.py  projects.py  search.py  site_config_categories.py  site_init.py  site_languages.py  site_navigation.py  site_settings.py  static_content.py  static_content_categories.py
apps/backend/app/services/: about_init.py  blog_tags.py  home_init.py  search.py  site_config_categories.py  site_init.py
apps/backend/app/tasks/: sync_github_projects.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 0001_initial_schema.py  08e665ccfef0_create_project_and_embedding_tables.py  (+18 more)
apps/backend/tests/: test_health.py
(+775 files in other folders)
