[project]
name = "nextblog-api"
version = "0.1.0"
description = "Python backend for NextBlog."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*", "typings*"]

[tool.ruff]
line-length = 100
target-version = "py311"
